Added dynamic value variable to the HTML component, by importing FormsModule in the TS module. Added the name variable into the TS component to match what the HTML component has

--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "udemy-learning-angular"
+    }
+  },
+  "defaultProject": "udemy-learning-angular",
+  "cli": {
+    "analytics": "d4de2e0e-ef01-4b19-8a38-7b702bee2e4c"
+  }
 }
